--- a/public/locales/en/landingPage.json
+++ b/public/locales/en/landingPage.json
@@ -46,5 +46,9 @@
       "title": "End-To-End encryption",
       "description": "If you wish, we will generate fully end-to-end encrypted reports of your emails. No one else except you will be able to read those reports. Not even we can decrypt them."
     }
+  },
+  "catch": {
+    "title": "There's a catch though",
+    "description": "It's not about money. It's not about usage. It's not about your data. It's about mouth propaganda. We don't charge any money to use KleckRelay and we want to keep it that way. If you like, you can donate any amount, but you don't need to. We would really appreciate it if you could tell your friends about KleckRelay. We want to make KleckRelay as popular as possible. The more people use KleckRelay, the more we can improve it. So please tell your friends about KleckRelay. Thank you very much and now have fun using it! :)"
   }
 }
