--- a/public/locales/en/landingPage.json
+++ b/public/locales/en/landingPage.json
@@ -2,7 +2,7 @@
   "landing": {
     "title": "Say goodbye 👋 to email tracking",
     "goToExplanation": "Learn More",
-    "creationExplanation": "Create new Aliases for each Service you use",
+    "creationExplanation": "Create new Aliases for every Service you use",
     "privateMail": "your-email@example.com"
   },
   "explanation": {
